--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "firebase": "^3.6.5",
     "lodash": "^3.10.1",
     "node-sass": "^3.8.0",
     "react": "^0.14.3",
