--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "eslint-config-rallycoding": "^3.2.0",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
