--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
     "redux": "^3.0.4",
+    "redux-thunk": "^2.2.0",
     "superagent": "^2.1.0"
   }
 }
